c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@varargs.c.2021.x86_64.linux.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arch-os-specific/varargs.2021.x86_64.linux.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![feature(c_variadic, raw_ref_op)]
extern "C" {
    fn printf(__format: *const ::core::ffi::c_char, ...) -> ::core::ffi::c_int;
    fn vprintf(
        __format: *const ::core::ffi::c_char,
        __arg: ::core::ffi::VaList,
    ) -> ::core::ffi::c_int;
    fn putchar(__c: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
pub type __builtin_va_list = [__va_list_tag; 1];
#[derive(Copy, Clone)]
#[repr(C)]
pub struct __va_list_tag {
    pub gp_offset: ::core::ffi::c_uint,
    pub fp_offset: ::core::ffi::c_uint,
    pub overflow_arg_area: *mut ::core::ffi::c_void,
    pub reg_save_area: *mut ::core::ffi::c_void,
}
pub type va_list = __builtin_va_list;
pub type size_t = usize;
#[derive()]
#[repr(C)]
pub struct vastruct<'a> {
    pub args: ::core::ffi::VaListImpl<'a>,
}
#[no_mangle]
pub unsafe extern "C" fn call_printf() {
    println!("{:}, {:.6}", 10 as core::ffi::c_int, 1.5f64 as f64);
}
#[no_mangle]
pub unsafe extern "C" fn my_vprintf(
    mut format: *const ::core::ffi::c_char,
    mut ap: ::core::ffi::VaList,
) {
    vprintf(format, ap.as_va_list());
}
#[no_mangle]
pub unsafe extern "C" fn call_vprintf(
    mut format: *const ::core::ffi::c_char,
    mut c2rust_args: ...
) {
    let mut ap: ::core::ffi::VaListImpl;
    ap = c2rust_args.clone();
    my_vprintf(format, ap.as_va_list());
}
#[no_mangle]
pub unsafe extern "C" fn my_printf(mut fmt: *const ::core::ffi::c_char, mut c2rust_args: ...) {
    let mut ap: ::core::ffi::VaListImpl;
    ap = c2rust_args.clone();
    while *fmt != 0 {
        match *fmt as ::core::ffi::c_int {
            37 => {
                fmt = fmt.offset(1);
                if !(*fmt == 0) {
                    match *fmt as ::core::ffi::c_int {
                        105 | 100 => {
                            print!("{:}", ap.arg::<::core::ffi::c_int>() as core::ffi::c_int);
                        }
                        102 => {
                            print!("{:.6}", ap.arg::<::core::ffi::c_double>() as f64);
                        }
                        115 => {
                            print!("{:>}", {
                                std::ffi::CStr::from_ptr(ap.arg::<*mut ::core::ffi::c_char>()
                                    as *const core::ffi::c_char)
                                .to_str()
                                .unwrap()
                            });
                        }
                        _ => {}
                    }
                }
            }
            _ => {
                print!("{:}", *fmt as ::core::ffi::c_int as u8 as char);
            }
        }
        fmt = fmt.offset(1);
    }
}
#[no_mangle]
pub unsafe extern "C" fn simple_vacopy(mut fmt: *const ::core::ffi::c_char, mut c2rust_args: ...) {
    let mut ap: ::core::ffi::VaListImpl;
    let mut aq: ::core::ffi::VaListImpl;
    ap = c2rust_args.clone();
    aq = ap.clone();
    vprintf(fmt, ap.as_va_list());
    vprintf(fmt, aq.as_va_list());
}
#[no_mangle]
pub unsafe extern "C" fn valist_struct_member(
    mut fmt: *const ::core::ffi::c_char,
    mut c2rust_args: ...
) {
    let mut a: vastruct = vastruct {
        args: ::core::mem::MaybeUninit::uninit().assume_init(),
    };
    let mut b: vastruct = vastruct {
        args: ::core::mem::MaybeUninit::uninit().assume_init(),
    };
    a.args = c2rust_args.clone();
    b.args = a.args.clone();
    vprintf(fmt, a.args.as_va_list());
    vprintf(fmt, b.args.as_va_list());
}
#[no_mangle]
pub unsafe extern "C" fn valist_struct_pointer_member(
    mut fmt: *const ::core::ffi::c_char,
    mut c2rust_args: ...
) {
    let mut a: vastruct = vastruct {
        args: ::core::mem::MaybeUninit::uninit().assume_init(),
    };
    let mut b: vastruct = vastruct {
        args: ::core::mem::MaybeUninit::uninit().assume_init(),
    };
    let mut p: *mut vastruct = &raw mut a;
    let mut q: *mut vastruct = &raw mut b;
    (*p).args = c2rust_args.clone();
    (*q).args = (*p).args.clone();
    vprintf(fmt, (*p).args.as_va_list());
    vprintf(fmt, (*q).args.as_va_list());
}
#[no_mangle]
pub unsafe extern "C" fn restart_valist(mut fmt: *const ::core::ffi::c_char, mut c2rust_args: ...) {
    let mut ap: ::core::ffi::VaListImpl;
    ap = c2rust_args.clone();
    vprintf(fmt, ap.as_va_list());
    ap = c2rust_args.clone();
    vprintf(fmt, ap.as_va_list());
}
#[no_mangle]
pub unsafe extern "C" fn print_int(mut ap: *mut ::core::ffi::VaListImpl) {
    print!("{:}", (*ap).arg::<::core::ffi::c_int>() as core::ffi::c_int);
}
#[no_mangle]
pub unsafe extern "C" fn borrowed_valist(mut count: size_t, mut c2rust_args: ...) {
    let mut ap: ::core::ffi::VaListImpl;
    ap = c2rust_args.clone();
    while count > 0 as size_t {
        print_int(&raw mut ap);
        count = count.wrapping_sub(1);
    }
}
