c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@varargs.c.2024.x86_64.linux.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arch-os-specific/varargs.2024.x86_64.linux.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#![feature(c_variadic)]
unsafe extern "C" {
    unsafe fn printf(__format: *const u8, ...) -> ::core::ffi::c_int;
    unsafe fn vprintf(__format: *const u8, __arg: ::core::ffi::VaList) -> ::core::ffi::c_int;
    unsafe fn putchar(__c: ::core::ffi::c_int) -> ::core::ffi::c_int;
    static va_callback_backend: va_callback_backend;
}
pub type __builtin_va_list = [__va_list_tag; 1];
#[derive(Copy, Clone)]
#[repr(C)]
pub struct __va_list_tag {
    pub gp_offset: ::core::ffi::c_uint,
    pub fp_offset: ::core::ffi::c_uint,
    pub overflow_arg_area: *mut ::core::ffi::c_void,
    pub reg_save_area: *mut ::core::ffi::c_void,
}
pub type va_list = __builtin_va_list;
pub type size_t = usize;
#[derive()]
#[repr(C)]
pub struct vastruct<'a> {
    pub args: ::core::ffi::VaList<'a>,
}
#[derive()]
#[repr(C)]
pub struct va_ptr_struct<'a> {
    pub args: *mut ::core::ffi::VaList<'a>,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct va_callback_backend {
    pub set_option:
        Option<unsafe extern "C" fn(::core::ffi::c_int, ::core::ffi::VaList) -> ::core::ffi::c_int>,
}
pub const NULL: *mut ::core::ffi::c_void = ::core::ptr::null_mut::<::core::ffi::c_void>();
#[unsafe(no_mangle)]
pub unsafe extern "C" fn call_printf() {
    println!("{:}, {:.6}", 10 as core::ffi::c_int, 1.5f64 as f64);
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn my_vprintf(mut format: *const u8, mut ap: ::core::ffi::VaList) {
    vprintf(format, ap.clone());
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn call_vprintf(mut format: *const u8, mut c2rust_args: ...) {
    let mut ap: ::core::ffi::VaList;
    ap = c2rust_args.clone();
    my_vprintf(format, ap.clone());
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn my_printf(mut fmt: *const u8, mut c2rust_args: ...) {
    let mut ap: ::core::ffi::VaList;
    ap = c2rust_args.clone();
    while *fmt != 0 {
        match *fmt as ::core::ffi::c_int {
            37 => {
                fmt = fmt.offset(1);
                if *fmt != 0 {
                    match *fmt as ::core::ffi::c_int {
                        105 | 100 => {
                            print!("{:}", ap.arg::<::core::ffi::c_int>() as core::ffi::c_int);
                        }
                        102 => {
                            print!("{:.6}", ap.arg::<::core::ffi::c_double>() as f64);
                        }
                        115 => {
                            print!("{:>}", {
                                xj_str_from_ptr(ap.arg::<*mut u8>() as *const u8)
                            });
                        }
                        _ => {}
                    }
                }
            }
            _ => {
                print!("{:}", *fmt as ::core::ffi::c_int as u8 as char);
            }
        }
        fmt = fmt.offset(1);
    }
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn simple_vacopy(mut fmt: *const u8, mut c2rust_args: ...) {
    let mut ap: ::core::ffi::VaList;
    let mut aq: ::core::ffi::VaList;
    ap = c2rust_args.clone();
    aq = ap.clone();
    vprintf(fmt, ap.clone());
    vprintf(fmt, aq.clone());
}
unsafe extern "C" fn callback_set_option(
    mut option: ::core::ffi::c_int,
    mut args: ::core::ffi::VaList,
) -> ::core::ffi::c_int {
    return option;
}
#[unsafe(no_mangle)]
pub static mut defined_va_callback_backend: va_callback_backend = va_callback_backend {
    set_option: Some(
        callback_set_option
            as unsafe extern "C" fn(::core::ffi::c_int, ::core::ffi::VaList) -> ::core::ffi::c_int,
    ),
};
#[unsafe(no_mangle)]
pub unsafe extern "C" fn has_va_callback_backend() -> ::core::ffi::c_int {
    return va_callback_backend.set_option.is_some() as ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn valist_struct_member(mut fmt: *const u8, mut c2rust_args: ...) {
    let mut a: vastruct = vastruct {
        args: ::core::mem::MaybeUninit::uninit().assume_init(),
    };
    let mut b: vastruct = vastruct {
        args: ::core::mem::MaybeUninit::uninit().assume_init(),
    };
    a.args = c2rust_args.clone();
    b.args = a.args.clone();
    vprintf(fmt, a.args.clone());
    vprintf(fmt, b.args.clone());
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn valist_struct_pointer_member(mut fmt: *const u8, mut c2rust_args: ...) {
    let mut a: vastruct = vastruct {
        args: ::core::mem::MaybeUninit::uninit().assume_init(),
    };
    let mut b: vastruct = vastruct {
        args: ::core::mem::MaybeUninit::uninit().assume_init(),
    };
    let mut p: *mut vastruct = &raw mut a;
    let mut q: *mut vastruct = &raw mut b;
    (*p).args = c2rust_args.clone();
    (*q).args = (*p).args.clone();
    vprintf(fmt, (*p).args.clone());
    vprintf(fmt, (*q).args.clone());
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn restart_valist(mut fmt: *const u8, mut c2rust_args: ...) {
    let mut ap: ::core::ffi::VaList;
    ap = c2rust_args.clone();
    vprintf(fmt, ap.clone());
    ap = c2rust_args.clone();
    vprintf(fmt, ap.clone());
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn print_int(mut ap: *mut ::core::ffi::VaList) {
    print!("{:}", (*ap).arg::<::core::ffi::c_int>() as core::ffi::c_int);
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn use_va_ptr_struct(mut s: *mut va_ptr_struct) {
    print_int((*s).args);
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn borrowed_valist(mut count: size_t, mut c2rust_args: ...) {
    let mut ap: ::core::ffi::VaList;
    ap = c2rust_args.clone();
    while count > 0 as size_t {
        print_int(&raw mut ap);
        count = count.wrapping_sub(1);
    }
}
unsafe fn xj_str_from_ptr<'a>(ptr: *const u8) -> &'a str {
    if ptr.is_null() {
        "(null)"
    } else {
        core::ffi::CStr::from_ptr(ptr as *const ::core::ffi::c_char)
            .to_str()
            .unwrap()
    }
}
